[package]
name = "wasm-tic-tac-toe"
version = "0.1.0"
authors = ["JS <dev@voidst.one>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
#mcts-rs = "0.1.0"
mcts-rs = { git = "https://github.com/PaytonWebber/mcts-rs.git", rev = "c9d879aee17829f852507477e13d8a6848cdccf7" }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
